# vdl

./: .gitignore  Cargo.toml  EXTENSION_GUIDE.md  INSTALLATION.md  README.md  vdl  vdl-wrapper.py
.github/workflows/: build.yml  cross-platform.yml
api/: Cargo.toml
api/src/: main.rs
src/: downloader.rs  lib.rs  main.rs  metadata.rs
src/extractors/: mod.rs
src/extractors/facebook/: mod.rs
src/extractors/instagram/: mod.rs
src/extractors/twitter/: mod.rs
src/extractors/vimeo/: mod.rs
src/extractors/youtube/: mod.rs
