[package]
name = "vdl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
futures = "0.3"
bytes = "1.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.11"
strip-ansi-escapes = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true